# wincounter

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: basic.yaml
docs/: CHANGELOG.md  WASM.md  WASM_IMPLEMENTATION.md  WASM_QUICK_REFERENCE.md
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out/diff/: src__heads_up.rs_line_41_col_9.diff  src__heads_up.rs_line_41_col_9_001.diff  src__heads_up.rs_line_41_col_9_002.diff  src__heads_up.rs_line_46_col_52.diff  src__heads_up.rs_line_46_col_52_001.diff  src__heads_up.rs_line_46_col_9.diff  src__heads_up.rs_line_46_col_9_001.diff  src__heads_up.rs_line_46_col_9_002.diff  src__heads_up.rs_line_51_col_9.diff  src__heads_up.rs_line_51_col_9_001.diff  src__heads_up.rs_line_51_col_9_002.diff  src__heads_up.rs_line_56_col_53.diff  src__heads_up.rs_line_56_col_53_001.diff  src__heads_up.rs_line_56_col_9.diff  src__heads_up.rs_line_56_col_9_001.diff  src__heads_up.rs_line_56_col_9_002.diff  src__heads_up.rs_line_61_col_9.diff  src__heads_up.rs_line_61_col_9_001.diff  src__heads_up.rs_line_61_col_9_002.diff  src__heads_up.rs_line_66_col_41.diff  src__heads_up.rs_line_66_col_41_001.diff  src__heads_up.rs_line_66_col_68.diff  src__heads_up.rs_line_66_col_68_001.diff  src__heads_up.rs_line_66_col_9.diff  src__heads_up.rs_line_66_col_9_001.diff  src__heads_up.rs_line_66_col_9_002.diff  src__heads_up.rs_line_67_col_12.diff  src__heads_up.rs_line_67_col_12_001.diff  (+145 more)
src/: heads_up.rs  lib.rs  results.rs  util.rs  win.rs  wins.rs
