[package]
name = "wincounter"
description = "Binary win counter that supports ties"
version = "0.1.5"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ContractBridge/wincounter.git"
homepage = "https://github.com/ContractBridge/wincounter"
exclude = [".github/workflows/*", ".gitignore", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.3"
serde = { version = "1.0.228", features = ["derive"] }
